@@ -23,7 +23,8 @@ import org.apache.kafka.common.errors.GroupIdNotFoundException;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 
 import scala.jdk.javaapi.CollectionConverters;
@@ -36,11 +37,11 @@ import static org.junit.jupiter.api.Assertions.fail;
 public class AuthorizerIntegrationTest extends AbstractAuthorizerIntegrationTest {
     @Test
     public void testDescribeGroupCliWithGroupDescribe() throws Exception {
-        addAndVerifyAcls(CollectionConverters.asScala(Collections.singleton(new AccessControlEntry(ClientPrincipal().toString(), "*", DESCRIBE, ALLOW))).toSet(), groupResource());
+        addAndVerifyAcls(CollectionConverters.asScala(Set.of(new AccessControlEntry(ClientPrincipal().toString(), "*", DESCRIBE, ALLOW))).toSet(), groupResource());
 
         String[] cgcArgs = new String[]{"--bootstrap-server", bootstrapServers(listenerName()), "--describe", "--group", group()};
         ConsumerGroupCommandOptions opts = ConsumerGroupCommandOptions.fromArgs(cgcArgs);
-        try (ConsumerGroupCommand.ConsumerGroupService consumerGroupService = new ConsumerGroupCommand.ConsumerGroupService(opts, Collections.emptyMap())) {
+        try (ConsumerGroupCommand.ConsumerGroupService consumerGroupService = new ConsumerGroupCommand.ConsumerGroupService(opts, Map.of())) {
             consumerGroupService.describeGroups();
             fail("Non-existent group should throw an exception");
         } catch (ExecutionException e) {
